# tool-learn

./: .clang-format  .gitignore  CMakeLists.txt  README.md
GOF/: CMakeLists.txt  README.md  common.h  main.cpp
GOF/Creational/: AbstractFactory.h  Builder.h  Factory.h  Prototype.h  Singleton.cpp  Singleton.h
GOF/Structural/: Adapter.h  Decorator.h  Flyweight.h  Proxy.h
algorithm/BVH/: BVH.hpp  geometry.cpp  geometry.hpp  main.cpp
cmake/: tools.cmake
cpp-std/smart-pointer/: main.cpp
data-structure/: CMakeLists.txt  README.md
data-structure/BVH/: BVH.cpp  CMakeLists.txt  readme.md  utils.cpp  utils.hpp
eigen/: main.cpp
lib/: CMakeLists.txt
lib-example/: README.md
lib-example/eigen/: CMakeLists.txt
libs/eigen/: CMakeLists.txt
libs/openmp/: CMakeLists.txt  main.cpp
libs/spdlog/: CMakeLists.txt  main.cpp
std/smart-ptr/: CMakeLists.txt  main.cpp
std/synchronize/: CMakeLists.txt  atomic.cpp  condition_variable.cpp  future.cpp  memory_order.cpp  mutex.cpp  reorder.cpp  semaphore.cpp  thread.cpp  yield.cpp
tools/: CMakeLists.txt
tools/process-bar/: CMakeLists.txt  README.md  main.cpp
unix/: CMakeLists.txt
unix/SocketLearn/: README.md
unix/SocketLearn/IOMultiplexing/: README.md  echo_client_select.c  echo_server_poll.c  echo_server_select.c
unix/SocketLearn/my_lib/: .acc_sock.c  .acc_sock.h
unix/SocketLearn/simple_echo/: README.md  echo_client.c  echo_server.c
unix/coretine/: CMakeLists.txt  README.md  main.cpp
unix/mmap/: CMakeLists.txt  README.md  reader.c  share.h  writer.c
